finished creating sidebar containing profile and todo list activity

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -14,4 +14,6 @@
     <string name="password">Contraseña</string>
     <string name="register">Registro</string>
     <string name="username">Username</string>
+    <string name="close">Cerrar</string>
+    <string name="open">Abierto</string>
 </resources>
