--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -16,4 +16,6 @@
     <string name="username">Username</string>
     <string name="close">Cerrar</string>
     <string name="open">Abierto</string>
+    <string name="my_profile">Mmi Perfil</string>
+    <string name="to_do_list">Lista de quehaceres</string>
 </resources>
