--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="login_here">Already have an Account? Login Here</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="my_profile">My Profile</string>
+    <string name="to_do_list">To Do List</string>
 
 
 </resources>
