--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DoItNow</string>
-    <string name="helloworld">Hello World</string>
+    <string name="hello_world">Hello World</string>
     <string name="username">Username</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
@@ -37,5 +37,11 @@
     <string name="error_registration">Some error occurred while registering user</string>
     <string name="task_list_title">Your Tasks</string>
     <string name="already_in_task_list">Already in To Do List</string>
+    <string name="no_word">No Word</string>
+    <string name="time_changed_broadcast">You have changed your time, please check your tasks due time</string>
+    <string name="timezone_changed_broadcast">You have changed your timezone, please check your tasks due time</string>
+    <string name="date_changed_broadcast">You have changed your date, please check your tasks due time</string>
+    <string name="complete_task">Completed</string>
+    <string name="not_complete_task">Not Completed</string>
 
 </resources>
