--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -44,4 +44,5 @@
     <string name="timezone_changed_broadcast">Ha cambiado su zona horaria, verifique las tareas a tiempo</string>
     <string name="complete_task">Terminado</string>
     <string name="not_complete_task">Sin Completar</string>
+    <string name="is_due">se debe</string>
 </resources>
